add html css java

--- a/project.html
+++ b/project.html
@@ -70,6 +70,10 @@ var myText = document.getElementById("helloText");
   <link href="https://fonts.googleapis.com/css?family=Poppins:400, 900" rel="stylesheet">
   <!-- Animate CSS -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+  <script>
+      new WOW().init();
+  </script>
   </head>
  <body>
     
@@ -319,6 +323,35 @@ var myText = document.getElementById("helloText");
 </div>
  
 <!--- End Clients -->
+<!--Get Involoved-->
+<div id="getinvoloved" class="getinvoloved">
+    <div class="container">
+        <h2> Get Involved</h2>
+        <div class="row">
+            <div class="col-lg-4 col-md-4 wow flipInY">
+                <div class="options">
+                    <i class="fas fa-globe-americas" aria-hidden="true"></i> 
+                    <h3> Explore</h3>
+                    <p> hey there</p>
+                    <button class="btn btn-success">Visit</button>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 wow flipInY">
+                <div class= "options">
+                    <i class="fas fa-hands-helping" aria-hidden="true"></i>
+                    <h3> Volunteer</h3>
+                    <p> oh you again</p>
+                    <button class="btn btn-success">Sign Up</button>
+                </div>
+            </div>
+            <div class="col-lg-4 clo-md-4 wow flipInY">
+                <div class="options">
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
  <!--- Contact -->
  <div id="contact" class="contact">
     <div class="container">
